
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void set_val(char *buf, int pos, int val)
{
 buf[pos] = (val & 0xff000000) >> 24;
 buf[pos + 1] = (val & 0x00ff0000) >> 16;
 buf[pos + 2] = (val & 0x0000ff00) >> 8;
 buf[pos + 3] = (val & 0x000000ff);
}
